--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         />
         <div class="subtext">
           <h1>SEE YOU ON VALENTINE MY LOVE!</h1>
-          <img src="IMG_3464.JPG" id="leo" />
+          <img src="vector.JPG" id="leo" />
         </div>
       </div>
     </div>
