--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         />
       </div>
       <div class="title">
-        <h1>WILL YOU BE MY VALENTINE? >w<</h1>
+        <h1> LAN ANH OI HOC IT DI >w<</h1>
       </div>
       <div class="buttons-container">
         <button id="yes" onclick="YES()">YESSSSSSS!</button>
@@ -27,8 +27,8 @@
           src="https://44.media.tumblr.com/9202b574ef187070719b53e7d0ee0eaf/cd2af14856a37866-6d/s500x750_f1/fa87ed5a6b7f1dc5436e71159718f217414f0115.gifv"
         />
         <div class="subtext">
-          <h1>SEE YOU ON VALENTINE MY LOVE!</h1>
-          <img src="vector.jpg" id="leo" />
+          <h1> HOC IT DI LAY CHONG SOM LAM GI :V </h1>
+          <img src="" id="leo" />
         </div>
       </div>
     </div>
